--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "SHA256:8yBBkQCSEN06oKHVOHMxRtZOMQs/Br1Z+PdtXRGftrQ"
+            - "SHA256:75xMU49CcuMoEFGclMVApuRy4BHcY+brhCLc7cYFZwo"
       - run:
           name: Deploy to GCP Compute Engine
           command: |
-            ssh -o StrictHostKeyChecking=no dino_wu@34.81.88.251 "cd /home/dino_wu/oogiri-api-mongo/ && sudo git pull && sudo npm install && sudo pm2 restart 4 && sudo pm2 restart 5"
+            ssh -i ~/.ssh/id_rsa dino_wu@34.81.88.251 StrictHostKeyChecking=no "cd /home/dino_wu/oogiri-api-mongo/ && sudo git pull && sudo npm install && sudo pm2 restart 4 && sudo pm2 restart 5"
             echo "Deploy success"
 workflows:
   version: 2
