--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Deploy to GCP Compute Engine
           command: |
-            ssh -v -o StrictHostKeyChecking=no dino_wu@34.81.88.251 "cd /home/dino_wu/oogiri-api-mongo/ && git pull && yarn install && pm2 restart 4 && pm2 restart 5"
+            gcloud compute ssh --zone "asia-east1-b" "uat-apidb" --project "uat-environment-387601" --command="cd /home/dino_wu/oogiri-api-mongo/ && git pull && yarn install && pm2 restart 4 && pm2 restart 5"
 
 workflows:
   version: 2
