--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
 version: 2.1
 
 jobs:
-  build:
-    docker:
-      - image: circleci/node:16
-    steps:
-      - checkout
-      - run: yarn install
+  # build:
+  #   docker:
+  #     - image: circleci/node:16
+  #   steps:
+  #     - checkout
+  #     - run: npm install
 
   deploy:
     docker:
