--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
           command: |
             mkdir -p ~/.ssh
             echo -e "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+            echo -e "$SSH_PUBLIC_KEY" > ~/.ssh/id_rsa.pub
             chmod 600 ~/.ssh/id_rsa
       - run:
           name: Authenticate gcloud
