--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "slugify": "^1.6.6",
     "stream": "^0.0.2",
     "zlib": "^1.0.5",
-    "redis": "^4.6.7"
+    "redis": "^4.6.7",
+    "ping": "^0.4.4"
   }
 }
