--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "ping": "^0.4.4",
     "puppeteer": "^19.7.5",
     "redis": "^4.6.7",
     "request": "^2.88.2",
