--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run:
           name: Deploy to GCP Compute Engine
           command: |
-            ssh -o StrictHostKeyChecking=no $VM_USER@$VM_IP "cd /home/dino_wu/oogiri-api-mongo/ && git pull && npm install && sudo pm2 restart 4 && sudo pm2 restart 5"
+            ssh -o StrictHostKeyChecking=no $VM_USER@$VM_IP "cd /home/dino_wu/oogiri-api-mongo/ && sudo git pull && sudo npm install && sudo pm2 restart 4 && sudo pm2 restart 5"
 
 workflows:
   build-and-deploy:
